@@ -1,20 +1,20 @@
-package org.odk.tooth_office.Services.Implementations;
+/*package org.odk.tooth_office.Services.Implementations;
 
 import lombok.RequiredArgsConstructor;
 import org.odk.tooth_office.DTO.SecretaireDTO;
-import org.odk.tooth_office.DTO.SecretaireResponseDTO;
 import org.odk.tooth_office.Entity.Cabinet;
 import org.odk.tooth_office.Entity.ChefCabinet;
 import org.odk.tooth_office.Entity.Secretaire;
-import org.odk.tooth_office.Mapper.SecretaireMapper;
 import org.odk.tooth_office.Repository.CabinetRepository;
 import org.odk.tooth_office.Repository.ChefCabinetRepository;
 import org.odk.tooth_office.Repository.SecretaireRepository;
 import org.odk.tooth_office.Services.Interfaces.SecretaireService;
+import org.odk.tooth_office.security.PasswordService;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,35 +23,30 @@ public class SecretaireServiceImplementation implements SecretaireService {
     private final SecretaireRepository secretaireRepository;
     private final CabinetRepository cabinetRepository;
     private final ChefCabinetRepository chefCabinetRepository;
-    private final SecretaireMapper secretaireMapper;
+    private final PasswordService passwordService;
 
     @Override
-    public List<SecretaireResponseDTO> recupererTous() {
-        return secretaireRepository.findAll().stream()
-                .map(secretaireMapper::toResponseDTO)
-                .toList();
+    public List<SecretaireDTO> getAll() {
+        return secretaireRepository.findAll().stream().map(this::toDto).collect(Collectors.toList());
     }
 
     @Override
-    public Optional<SecretaireResponseDTO> getById(Long id) {
-        return secretaireRepository.findById(id)
-                .map(secretaireMapper::toResponseDTO);
+    public Optional<SecretaireDTO> getById(Long id) {
+        return secretaireRepository.findById(id).map(this::toDto);
     }
 
     @Override
-    public SecretaireResponseDTO create(SecretaireDTO dto) {
-        Secretaire secretaire = toEntity(dto, new Secretaire());
-        Secretaire saved = secretaireRepository.save(secretaire);
-        return secretaireMapper.toResponseDTO(saved);
+    public SecretaireDTO create(SecretaireDTO dto) {
+        Secretaire saved = secretaireRepository.save(toEntity(dto, new Secretaire()));
+        return toDto(saved);
     }
 
     @Override
-    public Optional<SecretaireResponseDTO> update(Long id, SecretaireDTO dto) {
+    public Optional<SecretaireDTO> update(Long id, SecretaireDTO dto) {
         return secretaireRepository.findById(id).map(existing -> {
             Secretaire updated = toEntity(dto, existing);
             updated.setId_utilisateur(id);
-            Secretaire saved = secretaireRepository.save(updated);
-            return secretaireMapper.toResponseDTO(saved);
+            return toDto(secretaireRepository.save(updated));
         });
     }
 
@@ -64,12 +59,33 @@ public class SecretaireServiceImplementation implements SecretaireService {
         return true;
     }
 
-    // Cette méthode gère la transformation des requêtes (DTO entrante) vers l'entité de la BDD
+    private SecretaireDTO toDto(Secretaire secretaire) {
+        SecretaireDTO dto = new SecretaireDTO();
+        dto.setId_utilisateur(secretaire.getId_utilisateur());
+        dto.setNom(secretaire.getNom());
+        dto.setPrenom(secretaire.getPrenom());
+        dto.setEmail(secretaire.getEmail());
+        dto.setAdresse(secretaire.getAdresse());
+        dto.setRole(secretaire.getRole());
+        dto.setTelephone(secretaire.getTelephone());
+        dto.setStatutCompte(secretaire.getStatutCompte());
+        dto.setCreatedAt(secretaire.getCreatedAt());
+        dto.setUpdatedAt(secretaire.getUpdatedAt());
+        dto.setCreatedBy(secretaire.getCreatedBy());
+        dto.setUpdatedBy(secretaire.getUpdatedBy());
+
+        dto.setCabinetId(secretaire.getCabinet() != null ? secretaire.getCabinet().getIdCabinet() : null);
+        dto.setChefCabinetId(secretaire.getChefCabinet() != null ? secretaire.getChefCabinet().getId_utilisateur() : null);
+        return dto;
+    }
+
     private Secretaire toEntity(SecretaireDTO dto, Secretaire secretaire) {
         secretaire.setNom(dto.getNom());
         secretaire.setPrenom(dto.getPrenom());
         secretaire.setEmail(dto.getEmail());
-        secretaire.setMpd(dto.getMpd());
+        if (dto.getMpd() != null && !dto.getMpd().isBlank()) {
+            secretaire.setMpd(passwordService.encodeIfNeeded(dto.getMpd()));
+        }
         secretaire.setAdresse(dto.getAdresse());
         secretaire.setRole(dto.getRole());
         secretaire.setTelephone(dto.getTelephone());
@@ -89,3 +105,4 @@ public class SecretaireServiceImplementation implements SecretaireService {
         return secretaire;
     }
 }
+*/
